# autoindex

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  query_splits.json
reproduce/: README.md
scripts/: run_all_splits.sh  run_baselines.sh  run_datasets.sh  run_experiments.sh  submit_all_baselines.sh  unity_ablation.slurm  unity_baseline.slurm
src/agents/: CONTEXT.md  __init__.py  agent_runner.py
src/agents/analysis_code_agent/: README.md  __init__.py  agent.py  analysis_agent.py  bm25_client.py  bm25_server.py  code_agent.py  config.yaml  eval_utils.py  llm_call.py  one_shot_agent.py  plot_experiment.py  preprocess.py  run_journal.py  run_tracker.py
src/agents/analysis_code_agent/analysis_tools/: __init__.py  read_documents.py  tools.py
src/agents/baseline/: preprocess.py
src/evaluation/: base.py  schema.py
src/evaluation/scripts/: aggregate_results.py  build_index.py  generate_ablation_tables.py  generate_summary_table.py  get_data.py  repartition_splits.py  test_preprocessing_split.py
tests/: TESTS_README.md  bm25_client_test.py  bm25_code_agent_integration_test.py  bm_25server_test.py  conftest.py  test_analysis_agent.py  test_batching_and_sampling.py
tests/agents/analysis_code_agent/: TEST_DOCUMENTATION.md  conftest.py  test_bm25_client.py  test_code_agent.py  test_eval_utils.py
tests/evaluation/: test_base_preprocessor.py  test_data_quality_validation.py  test_get_data.py  test_pipeline_integration.py  test_schema.py
tests/fixtures/: sample_documents.jsonl  sample_queries.jsonl
(+10 files in other folders)
